charts/bsky/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bsky
  labels:
    app: bsky-pds
