charts/bsky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bsky-pds
  labels:
    app: bsky-pds
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bsky-pds
  template:
    metadata:
      labels:
        app: bsky-pds
    spec:
      serviceAccountName: bsky-pds
      securityContext:
        {}
      containers:
        - name: bsky-pds
          securityContext:
            {}
          image: "ghcr.io/bluesky-social/pds:latest"
          imagePullPolicy: Always
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /pds
          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: pds-port
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          resources:
            {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: "bsky-pds"
