charts/bsky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsky-pds
  labels:
    app: bsky-pds
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: pds-port
      protocol: TCP
      name: pds-port
  selector:
    app: bsky-pds
