charts/bsky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsky-pds
  labels:
    app: bsky-pds
  annotations:
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "bsky.imdevinc.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bsky-pds
                port:
                  number: 3000
    - host: "*.bsky.imdevinc.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bsky-pds
                port:
                  number: 3000
